--- a/x11-misc/xautolock/ChangeLog
+++ b/x11-misc/xautolock/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xautolock
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xautolock/ChangeLog,v 1.24 2012/10/30 15:20:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xautolock/ChangeLog,v 1.25 2012/10/31 03:16:55 blueness Exp $
+
+  31 Oct 2012; Anthony G. Basile <blueness@gentoo.org> xautolock-2.2.ebuild:
+  stable ppc, bug #440288
 
   30 Oct 2012; Jeroen Roovers <jer@gentoo.org> xautolock-2.2.ebuild:
   RDEPEND on x11-misc/slimlock too by Ihar Hrachyshka (bug #440276).
@@ -77,5 +80,3 @@
 *xautolock-2.1 (13 Apr 2002)
   13 Apr 2002; Spider <spider@gentoo.org> xautolock-2.1.ebuild:
   initial ebuild.  for use with xlockmore
-
-
