--- a/net-dns/bind-tools/ChangeLog
+++ b/net-dns/bind-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.227 2012/10/31 00:51:01 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.228 2012/10/31 03:20:52 blueness Exp $
+
+  31 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bind-tools-9.9.2.ebuild:
+  stable arm, bug #440318
 
   31 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bind-tools-9.9.2.ebuild:
   stable ppc ppc64, bug #440318
