--- a/dev-libs/boost/ChangeLog
+++ b/dev-libs/boost/ChangeLog
@@ -1,6 +1,37 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.268 2012/10/30 23:28:10 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.269 2012/10/31 16:32:25 flameeyes Exp $
+
+*boost-1.51.0-r1 (31 Oct 2012)
+
+  31 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +boost-1.51.0-r1.ebuild,
+  -boost-1.35.0-r2.ebuild, -boost-1.35.0-r5.ebuild, -boost-1.37.0-r1.ebuild,
+  -boost-1.39.0.ebuild, -boost-1.41.0-r3.ebuild, -boost-1.42.0-r1.ebuild,
+  -boost-1.42.0-r2.ebuild, -boost-1.42.0.ebuild, -boost-1.45.0.ebuild,
+  -boost-1.47.0-r1.ebuild, -boost-1.47.0.ebuild, -boost-1.48.0-r2.ebuild,
+  -boost-1.50.0-r2.ebuild, -boost-1.50.0.ebuild, -boost-1.51.0.ebuild,
+  -files/1.35-remove-hardlink-creation.patch,
+  -files/boost-1.41.0-fix-CRC-on-x64-during-gzip-decompression.patch,
+  -files/boost-1.41.0-iostreams-missing-include-guard.patch,
+  -files/boost-1.41.0-mpi_process_group-missing-include.patch,
+  -files/boost-1.41.0-parameter-needs-python.patch,
+  -files/boost-1.41.0-spirit-fixed-include-guard-conflict.patch,
+  -files/boost-1.42.0-gcc45-python.patch,
+  -files/boost-1.42.0-parameter-needs-python.patch,
+  -files/boost-1.42.0-template_arity-gcc45.patch,
+  -files/boost-1.47.0-exceptions.patch, -files/boost-1.48.0-BOOST_FOREACH.patch,
+  -files/boost-1.48.0-gcc47.patch, -files/buildid-fix.patch,
+  -files/random-Jamfile, -files/random-Jamfile-1.45.0,
+  -files/random-Jamfile-1.47.0, -files/remove-toolset-1.41.0.patch,
+  -files/remove-toolset-1.42.0.patch, -files/remove-toolset-1.45.0.patch,
+  -files/remove-toolset-1.47.0.patch,
+  -files/remove_toolset_from_targetname.patch, boost-1.46.1-r1.ebuild,
+  boost-1.49.0-r1.ebuild, metadata.xml:
+  Unslotting. This removes a bunch of older packages that will not build on
+  modern systems, keeps only three versions (stable, mostly-stable and masked).
+  The new 1.51.0-r1 is designed so that it does not have to do any eselect or
+  eselect-like trickery for the symlinks, also drops the tests (which are not
+  working as expected anyway).
 
   30 Oct 2012; Mike Gilbert <floppym@gentoo.org> boost-1.51.0.ebuild:
   Remove python_mod_optimize call; boost_1_51 does not exist in site-packages.
