--- a/mail-client/thunderbird-bin/ChangeLog
+++ b/mail-client/thunderbird-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/thunderbird-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.90 2012/10/31 19:09:12 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.91 2012/10/31 19:11:13 axs Exp $
+
+*thunderbird-bin-10.0.10 (31 Oct 2012)
+
+  31 Oct 2012; Ian Stakenvicius <axs@gentoo.org>
+  +thunderbird-bin-10.0.10.ebuild:
+  ESR bump for security bug 439960
 
   31 Oct 2012; Ian Stakenvicius <axs@gentoo.org> thunderbird-bin-15.0.1.ebuild,
   thunderbird-bin-16.0.2.ebuild:
