--- a/sys-apps/pcmciautils/ChangeLog
+++ b/sys-apps/pcmciautils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/pcmciautils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.38 2012/02/25 06:43:55 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.39 2012/10/31 19:19:36 ssuominen Exp $
+
+  31 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> pcmciautils-017.ebuild:
+  Use udev.eclass for determining correct udevdir value from udev.pc pkg-config
+  file by using the udev_get_udevdir() function.
 
   25 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> pcmciautils-014-r1.ebuild,
   pcmciautils-015.ebuild, pcmciautils-016.ebuild, pcmciautils-017.ebuild:
