--- a/sys-libs/glibc/ChangeLog
+++ b/sys-libs/glibc/ChangeLog
@@ -1,5 +1,8 @@
 # ChangeLog for sys-libs/glibc
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.901 2012/10/31 19:18:48 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.902 2012/10/31 19:20:20 vapier Exp $
+
+  31 Oct 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.16.0.ebuild:
+  Move into ~arch.
 
   31 Oct 2012; Mike Frysinger <vapier@gentoo.org> glibc-2.15-r3.ebuild:
   Mark alpha/ia64/s390 stable #404993.
