--- a/media-plugins/vdr-graphtft/ChangeLog
+++ b/media-plugins/vdr-graphtft/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-graphtft
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-graphtft/ChangeLog,v 1.31 2012/10/20 17:46:20 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-graphtft/ChangeLog,v 1.32 2012/10/31 19:23:11 hd_brummy Exp $
+
+  31 Oct 2012; Joerg Bornkessel <hd_brummy@gentoo.org>
+  vdr-graphtft-0.3.6.ebuild:
+  backport fix <vdr-1.7.27, bug 440610
 
 *vdr-graphtft-0.3.6 (20 Oct 2012)
 
