--- a/media-plugins/vdr-graphtft/ChangeLog
+++ b/media-plugins/vdr-graphtft/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/vdr-graphtft
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-graphtft/ChangeLog,v 1.32 2012/10/31 19:23:11 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-graphtft/ChangeLog,v 1.33 2012/10/31 20:02:45 hd_brummy Exp $
+
+  31 Oct 2012; Joerg Bornkessel <hd_brummy@gentoo.org>
+  -vdr-graphtft-0.3.6.ebuild, -files/vdr-graphtft-0.3.6_gcc-4.4.x.diff,
+  -files/vdr-graphtft-0.3.6_gentoo.diff,
+  -files/vdr-graphtft-0.3.6_makefile.diff:
+  moved to overlay vdr-devel, need min vdr-1.7.27
 
   31 Oct 2012; Joerg Bornkessel <hd_brummy@gentoo.org>
   vdr-graphtft-0.3.6.ebuild:
