--- a/net-fs/samba/ChangeLog
+++ b/net-fs/samba/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-fs/samba
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.531 2012/11/01 04:19:58 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.532 2012/11/01 05:20:31 patrick Exp $
+
+*samba-4.0.0_rc4 (01 Nov 2012)
+
+  01 Nov 2012; Patrick Lauer <patrick@gentoo.org> +samba-4.0.0_rc4.ebuild:
+  Bump of 4.0_rc
 
 *samba-3.6.9 (01 Nov 2012)
 
