--- a/www-client/dwb/ChangeLog
+++ b/www-client/dwb/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for www-client/dwb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/dwb/ChangeLog,v 1.9 2012/10/28 19:35:14 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/dwb/ChangeLog,v 1.10 2012/11/01 06:21:22 radhermit Exp $
+
+*dwb-2012.10.28-r1 (01 Nov 2012)
+
+  01 Nov 2012; Tim Harder <radhermit@gentoo.org> +dwb-2012.10.28-r1.ebuild,
+  +files/dwb-2012.10.28-search-engine.patch:
+  Revision bump. Apply fix for search engine adding issue (bug #440692 by John
+  Brendler).
 
   28 Oct 2012; Tim Harder <radhermit@gentoo.org> dwb-2012.10.28.ebuild:
   LDFLAGS are now respected.
