--- a/www-client/dwb/ChangeLog
+++ b/www-client/dwb/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/dwb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/dwb/ChangeLog,v 1.10 2012/11/01 06:21:22 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/dwb/ChangeLog,v 1.11 2012/11/01 06:22:23 radhermit Exp $
+
+  01 Nov 2012; Tim Harder <radhermit@gentoo.org> -dwb-2012.05.11.ebuild,
+  -dwb-2012.10.28.ebuild:
+  Remove old.
 
 *dwb-2012.10.28-r1 (01 Nov 2012)
 
