--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7085 2012/10/31 22:28:25 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7086 2012/11/01 07:05:55 flameeyes Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  01 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
+  Unmask boost 1.50/1.51 to comply with glibc-2.16, as well as GnuTLS 3; keep
+  libtasn1-3 masked, and give more details on the reason.
 
   31 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   package.mask:
