--- a/media-radio/fldigi/ChangeLog
+++ b/media-radio/fldigi/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-radio/fldigi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.59 2012/10/21 18:13:53 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.60 2012/11/01 08:08:07 tomjbe Exp $
+
+*fldigi-3.21.59 (01 Nov 2012)
+
+  01 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.59.ebuild:
+  Version bump
 
 *fldigi-3.21.58 (21 Oct 2012)
 
