fix changelog entry
Package-Manager: portage-2.2.0_alpha138/cvs/Linux x86_64
Manifest-Sign-Key: 0x5D21B852895192F9

--- a/dev-util/intel-ocl-sdk/ChangeLog
+++ b/dev-util/intel-ocl-sdk/ChangeLog
@@ -1,11 +1,11 @@
 # ChangeLog for dev-util/intel-ocl-sdk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/intel-ocl-sdk/ChangeLog,v 1.7 2012/11/01 09:01:35 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/intel-ocl-sdk/ChangeLog,v 1.8 2012/11/01 09:03:05 xarthisius Exp $
 
   01 Nov 2012; Kacper Kowalik <xarthisius@gentoo.org> -intel-ocl-sdk-1.5.ebuild,
   intel-ocl-sdk-2.0.31360.ebuild:
-  Use bundled boost due to desloting. Fixes bug 440658 by Neil Dökkalfar <neil
-  @next-touch.com>. Drop old
+  Use bundled boost due to unslotting. Fixes bug 440658 by
+  Neil Dökkalfar <neil@next-touch.com>. Drop old
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   intel-ocl-sdk-2.0.31360.ebuild:
