--- a/sys-kernel/dracut/ChangeLog
+++ b/sys-kernel/dracut/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for sys-kernel/dracut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.90 2012/10/28 11:24:44 aidecoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.91 2012/11/01 09:54:08 aidecoe Exp $
+
+*dracut-024-r1 (01 Nov 2012)
+*dracut-023-r3 (01 Nov 2012)
+
+  01 Nov 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
+  +files/024-0001-Fallback-to-external-blkid-and-path_id.patch,
+  +files/023-0003-Fallback-to-external-blkid-and-path_id.patch,
+  +dracut-023-r3.ebuild, +dracut-024-r1.ebuild:
+  Fixes bug #437700. Thanks to Alexander Tsoy <alexander@tsoy.me> for the
+  report and the patch.
+
+  Also bumped dhcp version dependency to >=4.2.4_p2-r1 wrt bug #437108.
 
 *dracut-024 (28 Oct 2012)
 
