--- a/sys-kernel/dracut/ChangeLog
+++ b/sys-kernel/dracut/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/dracut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.91 2012/11/01 09:54:08 aidecoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.92 2012/11/01 10:10:12 aidecoe Exp $
+
+  01 Nov 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-014-r3.ebuild,
+  dracut-018-r3.ebuild, dracut-019-r6.ebuild, dracut-022-r6.ebuild,
+  dracut-023-r2.ebuild, dracut-024.ebuild:
+  Applied fix wrt bug #437108 to older ebuilds.
 
 *dracut-024-r1 (01 Nov 2012)
 *dracut-023-r3 (01 Nov 2012)
