--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1069 2012/11/01 03:46:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1070 2012/11/01 14:47:20 mpagano Exp $
+
+*vanilla-sources-3.6.5 (01 Nov 2012)
+*vanilla-sources-3.4.17 (01 Nov 2012)
+*vanilla-sources-3.0.50 (01 Nov 2012)
+
+  01 Nov 2012; Michael Pagano <mpagano@gentoo.org>
+  +vanilla-sources-3.0.50.ebuild, +vanilla-sources-3.4.17.ebuild,
+  +vanilla-sources-3.6.5.ebuild:
+  Version bumps
 
   01 Nov 2012; Jeroen Roovers <jer@gentoo.org> vanilla-sources-3.2.21.ebuild:
   Stable for HPPA (bug #422713).
