--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1032 2012/11/01 03:44:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1033 2012/11/01 15:04:04 mpagano Exp $
+
+*gentoo-sources-3.6.5 (01 Nov 2012)
+
+  01 Nov 2012; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.6.5.ebuild:
+  Linux patch 3.6.5
 
   01 Nov 2012; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.0.35.ebuild:
   Stable for HPPA (bug #412947).
