--- a/media-plugins/live/ChangeLog
+++ b/media-plugins/live/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/live
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.161 2012/11/01 16:19:10 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.162 2012/11/01 16:30:25 aballier Exp $
+
+  01 Nov 2012; Alexis Ballier <aballier@gentoo.org> live-2012.09.13.ebuild:
+  add mirror://gentoo as SRC_URI fallback since upstream removes old version
+  when releasing new ones, bug #389187
 
   01 Nov 2012; Alexis Ballier <aballier@gentoo.org> -live-2012.08.20.ebuild:
   remove old
