--- a/dev-lang/bashforth/ChangeLog
+++ b/dev-lang/bashforth/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/bashforth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/bashforth/ChangeLog,v 1.5 2012/05/10 15:43:19 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/bashforth/ChangeLog,v 1.6 2012/11/01 16:53:11 pinkbyte Exp $
+
+*bashforth-0.58a (01 Nov 2012)
+
+  01 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> +bashforth-0.58a.ebuild:
+  Version bump: EAPI 4, add ~amd64 keyword
 
   10 May 2012; Agostino Sarubbo <ago@gentoo.org> -bashforth-0.54a.ebuild:
   Remove old
