--- a/dev-lang/bashforth/ChangeLog
+++ b/dev-lang/bashforth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/bashforth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/bashforth/ChangeLog,v 1.7 2012/11/01 17:15:06 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/bashforth/ChangeLog,v 1.8 2012/11/01 17:33:40 blueness Exp $
+
+  01 Nov 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
+  This package is too cute to pass up, I'm adopting it.
 
   01 Nov 2012; Anthony G. Basile <blueness@gentoo.org> bashforth-0.58a.ebuild:
   keyword ~arm ~mips ~ppc ~ppc64, bug #440674
