--- a/dev-games/ogre/ChangeLog
+++ b/dev-games/ogre/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-games/ogre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/ogre/ChangeLog,v 1.84 2012/08/04 09:44:02 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/ogre/ChangeLog,v 1.85 2012/11/01 17:34:50 mr_bones_ Exp $
+
+*ogre-1.8.1 (01 Nov 2012)
+
+  01 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
+  +files/ogre-1.8.1-flags.patch, +files/ogre-1.8.1-threading.patch,
+  +ogre-1.8.1.ebuild:
+  version bump (bug #440074)
 
   04 Aug 2012; Agostino Sarubbo <ago@gentoo.org> ogre-1.8.0.ebuild:
   Stable for amd64, wrt bug #427056
