--- a/dev-games/ogre/ChangeLog
+++ b/dev-games/ogre/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-games/ogre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/ogre/ChangeLog,v 1.85 2012/11/01 17:34:50 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/ogre/ChangeLog,v 1.86 2012/11/01 19:33:47 mr_bones_ Exp $
+
+  01 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
+  -files/ogre-1.6.5-as-needed.patch, -files/ogre-1.6.5-automake.patch,
+  -files/ogre-1.6.5-boost.patch, -files/ogre-1.6.5-cegui.patch,
+  -files/ogre-1.6.5-gcc46.patch, -files/ogre-1.7.4-gcc46.patch,
+  -files/ogre-1.7.4-threading.patch, -ogre-1.6.5.ebuild, -ogre-1.7.4-r1.ebuild:
+  old
 
 *ogre-1.8.1 (01 Nov 2012)
 
