--- a/games-strategy/hedgewars/ChangeLog
+++ b/games-strategy/hedgewars/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/hedgewars
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.39 2012/09/24 00:40:19 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.40 2012/11/01 21:58:10 mr_bones_ Exp $
+
+*hedgewars-0.9.18 (01 Nov 2012)
+
+  01 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
+  +files/hedgewars-0.9.18-cflags.patch, +hedgewars-0.9.18.ebuild:
+  version bump (bug #440796)
 
   24 Sep 2012; Mike Frysinger <vapier@gentoo.org> hedgewars-0.9.17.ebuild:
   QA_DT_HASH (old/deprecated) -> QA_FLAGS_IGNORED (new hotness).
